--- a/clientApp/src/app/payment/payment-error/payment-error.component.html
+++ b/clientApp/src/app/payment/payment-error/payment-error.component.html
@@ -1,1 +1,5 @@
-<p>OPPS, something wen wrong please try again later</p>
+
+<div class="success-message">
+  <h4 >OPPS, something went wrong please try again later</h4>
+</div>
+
