--- a/clientApp/src/app/payment/payment-form/payment-form.component.html
+++ b/clientApp/src/app/payment/payment-form/payment-form.component.html
@@ -6,9 +6,24 @@
         <label class="form-label">{{controls.label}}</label>
         <input [type]="controls.type" class="form-control" [placeholder]="controls.placeHolder" [formControlName]="controls.name"  />
 
-        <ng-container *ngIf="fieldControls.controls[i].get(controls.name)?.errors && fieldControls.controls[i].get(controls.name)?.touched ">
-              <span class="errors">{{controls.label}} is invalid </span>
+        <ng-container *ngIf="fieldControls.controls[i].get(controls.name)?.hasError('required') && fieldControls.controls[i].get(controls.name)?.touched ">
+              <span class="errors">{{controls.label}} is required </span>
         </ng-container>
+        <ng-container *ngIf="fieldControls.controls[i].get(controls.name)?.hasError('pattern') && fieldControls.controls[i].get(controls.name)?.touched ">
+          <span class="errors">{{controls.label}} is invalid </span>
+    </ng-container>
+    <ng-container *ngIf="fieldControls.controls[i].get(controls.name)?.hasError('minlength') && fieldControls.controls[i].get(controls.name)?.touched ">
+      <span class="errors">{{controls.label}} need to be minimum of {{controls?.validator?.minLength}} characters </span>
+</ng-container>
+<ng-container *ngIf="fieldControls.controls[i].get(controls.name)?.hasError('maxlength') && fieldControls.controls[i].get(controls.name)?.touched ">
+  <span class="errors">{{controls.label}} need to be maximum of {{controls?.validator?.minLength}} characters </span>
+</ng-container>
+<ng-container *ngIf="fieldControls.controls[i].get(controls.name)?.hasError('maxlength') && fieldControls.controls[i].get(controls.name)?.touched ">
+  <span class="errors">{{controls.label}} need to be maximum of {{controls?.validator?.minLength}} characters </span>
+</ng-container>
+<ng-container *ngIf="fieldControls.controls[i].get(controls.name)?.hasError('LuhnValidation') && fieldControls.controls[i].get(controls.name)?.touched ">
+  <span class="errors">{{controls.label}} is invalid </span>
+</ng-container>
       </div>
       </ng-container>
       </ng-container>
