--- a/clientApp/src/app/app.component.scss
+++ b/clientApp/src/app/app.component.scss
@@ -39,3 +39,12 @@
     opacity: 1;
   }
 }
+
+@media only screen and (max-width: 1024px)
+{
+  .wrapper {
+    width: 100%;
+    border-radius: 0;
+    padding: 0.5em;
+  }
+}
