--- a/clientApp/src/app/payment/payment-details/payment-details.component.scss
+++ b/clientApp/src/app/payment/payment-details/payment-details.component.scss
@@ -64,4 +64,11 @@ label {
   color: #000;
 }
 
+@media only screen and (max-width: 1024px)
+{
+  .payment-method-container {
+    width: 100%;
+  }
+}
+
 
