--- a/clientApp/src/app/payment/payment-form/payment-form.component.scss
+++ b/clientApp/src/app/payment/payment-form/payment-form.component.scss
@@ -19,3 +19,11 @@
   align-items: center;
 
 }
+
+@media only screen and (max-width: 1024px)
+{
+  .form-container {
+    width: 100%;
+    overflow-y: scroll;
+  }
+}
