--- a/clientApp/src/app/payment/payment-success/payment-success.component.scss
+++ b/clientApp/src/app/payment/payment-success/payment-success.component.scss
@@ -11,3 +11,28 @@
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
 }
+
+
+@media only screen and (max-width: 1024px)
+{
+  .payment-wrapper {
+    border-radius: 0;
+    min-height: 100%;
+    width: 100%;
+    height: 100% !important;
+  }
+    .success-message {
+      height: 4em;
+      width: 100%;
+      padding: 1em;
+      position: absolute;
+      top: 50%;
+      margin-top: -2em;
+    }
+  .success-message h4 {
+    font-size: 1.2em;
+    color: var(--primary);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+  }
+}
