--- a/clientApp/src/app/payment/payment/payment.component.scss
+++ b/clientApp/src/app/payment/payment/payment.component.scss
@@ -6,3 +6,15 @@
   box-shadow: 10px 10px 5px rgba(0,0,0,0.15);
   height: 100%;
 }
+
+
+@media only screen and (max-width: 1024px)
+{
+
+  .payment-wrapper {
+    border-radius: 0;
+    min-height: 100%;
+    width: 100%;
+    height: auto;
+  }
+}
