--- a/clientApp/src/styles.scss
+++ b/clientApp/src/styles.scss
@@ -33,3 +33,9 @@ body, html {
   color: red;
   font-family: 'Poppins', sans-serif;
 }
+
+@media only screen and (max-width:1024px) {
+  body, html {
+    overflow-y: auto;
+  }
+}
